<resources>
    <string name="app_name">Resume Builder Application</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="your_login">Your login</string>
    <string name="pass">Pass</string>
    <string name="happy_cv_making">Happy CV Making!</string>

    <string name="phone">Phone</string>

    <string name="age">Age</string>
    <string name="your_age_in_years">Your Age in Years</string>
    <string name="_0123_456789">0123-456789</string>
    <string name="abc_xyz_com">abc@xyz.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="username">UserName</string>

    <string name="email">Email</string>


    <string name="city">City</string>
    <string name="city_e_g_lahore">City(e.g:Lahore)</string>
    <string name="create_resume">Create Resume</string>
    <string name="update_resume">Update Resume</string>
    <string name="delete_resume">Delete Resume</string>

    <string name="update_profile">Update Profile</string>

    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="template_preview">Template Preview</string>
    <string name="template_1">Template 1</string>
    <string name="template_2">Template 2</string>
    <string name="template_3">Template 3</string>
    <string name="template_4">Template 4</string>
    <string name="preview_template">Preview Template</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="download_pdf">Download PDF</string>


</resources>
